--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,12 @@
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "awilix": "^8.0.1",
+    "bcrypt": "^6.0.0",
+    "google-auth-library": "^10.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0"
   },
   "devDependencies": {
